public/css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
    overflow-x: hidden;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/*
 * Web Fonts
 */

@font-face {
    font-family: NeueMontrealBold;
    src: url(../fonts/neue_montreal_bold.woff);
    font-weight: bold;
}

@font-face {
    font-family: NeueMontrealRegular;
    src: url(../fonts/neue_montreal_regular.woff);
}

html {
    box-sizing: border-box;
    min-height: 100vh;
    scroll-behavior: smooth;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    background-color: white;
    font-family: NeueMontrealRegular;
    font-size: 16px;
    min-height: 100vh;
    /* for to-top btn */
    position: relative;
    width: 100vw;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
    margin: 0;
    padding: 0;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

/* Flash of Unstyled Content */

.no-js {
    visibility: hidden;
    opacity: 0;
}

.js {
    visibility: visible;
    opacity: 1;
}

/*
 * Scrollbar 
 */

::-webkit-scrollbar {
    display: none;
}

/*
 * To Top Btn 
 */

.to-top-btn {
    position: fixed;
    bottom: 20px;
    right: 20px;
    z-index: 9999;
}

.to-top-btn:hover {
    cursor: pointer;
}

/*
 * Header Section
 */

.main-header {
    align-items: center;
    display: flex;
    height: 13vh;
    justify-content: space-between;
    padding: 1.25rem;
}

.main-header__logotype {
    color: #222;
    font-size: 20px;
    text-transform: uppercase;
    text-decoration: none;
}

/* Nav Styles */

.main-header__nav {
    background-color: white;
    position: absolute;
    left: 0;
    top: 13vh;
    width: 100%;
    visibility: hidden;
    opacity: 0;
    transition: 0.2s ease;
}

.main-header__nav--active {
    visibility: visible;
    opacity: 1;
    transition: 0.2s ease;
}

.main-header__item-list {
    display: flex;
    flex-direction: column;
}

.main-header__item {
    border-bottom: 1px solid #b0b0b0;
    padding: 0.5rem 1.25rem;
}

.main-header__item:first-child {
    border-top: 1px solid #b0b0b0;
}

/* Link Styles */

.main-header__link,
.main-header__link--active {
    color: #222;
    font-size: 20px;
    text-decoration: none;
}

.main-header__link:hover {
    color: #222;
}

/* Burger Styles */

.main-header__burger {
    display: block;
}

.main-header__line {
    background-color: #b0b0b0;
    height: 1px;
    width: 18px;
    margin-bottom: 8px;
}

.main-header__line:last-child {
    margin: 0;
}

/*
 * Success
 */

.success {
    padding: 6rem 3rem 10rem;
}

.success__header {
    font-size: 100px;
}

/*
 * 404
 */

.notFound {
    padding: 6rem 3rem 10rem;
}

.notFound__header {
    font-size: 100px;
}

/*
 * Project Section
 */

.projects {
    display: grid;
    grid-auto-rows: 300px;
    gap: 4px;
    margin: 0 4px;
}

.projects__link {
    overflow: hidden;
    position: relative;
}

.projects__container {
    align-items: center;
    display: flex;
    justify-content: center;
    height: 100%;
    padding: 1rem;
}

.projects__description {
    background-color: #ffffff;
    color: #000000;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    justify-content: space-between;
    font-size: 20px;
    height: 100%;
    padding: 1rem;
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity 1s, z-index 0.3s;
    width: 100%;
    z-index: 9999;
}

.projects__link:hover .projects__description {
    opacity: 1;
    outline: 3px solid black;
    outline-offset: -2px;
}

.projects__link:first-child .projects__container {
    background: linear-gradient(315deg, #045de9 0%, #09c6f9 74%);
}

.projects__link:nth-child(2) .projects__container {
    background: linear-gradient(315deg, #017b5f 0%, #98de5b 74%);
}

.projects__link:nth-child(3) .projects__container {
    background: linear-gradient(315deg, #ec9f05 0%, #ff4e00 74%);
}

.projects__link:nth-child(4) .projects__container {
    background: linear-gradient(315deg, #ffdd00 0%, #fbb034 74%);
}

.projects__link:nth-child(5) .projects__container {
    background: linear-gradient(315deg, #20bf55 0%, #01baef 74%);
}

.projects__link:last-child {
    margin-bottom: 0;
}

.projects__image {
    height: 150px;
    width: 150px;
    z-index: 9998;
}
/* ... */

